fix upload drag over layout shift

--- a/src/styles/upload.scss
+++ b/src/styles/upload.scss
@@ -7,14 +7,14 @@
 	display: inline-flex;
 	gap: $size-space--s;
 	padding: $size-space--xs;
-	box-sizing: border-box;
+	border: 2px dashed transparent;
 
 	input[type="file"] {
 		display: none;
 	}
 
 	&.sp-image-upload--drag-over {
-		border: 2px dashed $color--beige-darker;
+		border-color: $color--beige-darker;
 		background-color: $color--beige;
 		border-radius: $size-radius--default;
 
